Update src/ext/java/org/opentripplanner/ext/legacygraphqlapi/datafetchers/LegacyGraphQLQueryTypeImpl.java
Co-authored-by: Hannes Junnila <hannes.junnila@gmail.com>